feat: spark support
