# apps/api/src/chains/chain-adapter.types.ts
@@ -11,5 +11,10 @@ export interface IChainAdapter {
   healthCheck(): Promise<Record<string, { ok: boolean; detail?: string }>>;
   getWalletInfo(): Promise<WalletInfoResponseDto>;
   getStats?(): Promise<Partial<StatsResponseDto>>;
-  backupWallet?(): Promise<string>;
+  getSparkBalance?(): Promise<{
+    availableBalance: number;
+    unconfirmedBalance: number;
+    fullBalance: number;
+  }>;
+  spendSpark?(address: string, amount: number): Promise<string>;
 }
